# palmod

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/palmod-profile/: Cargo.toml
crates/palmod-profile/src/: lib.rs
crates/palmod-run/: Cargo.toml
crates/palmod-run/src/: main.rs
crates/palmodctl/: Cargo.toml
crates/palmodctl/src/: lib.rs  main.rs
crates/palrev/: Cargo.toml
crates/palrev/src/: main.rs
docs/: architecture.md  install.md  lab-runbook.md  plugin-api.md  reversing.md  security.md  toolchain.md
docs/design/: reflection-mappings.md  roadmap.md
native/: CMakeLists.txt  CMakePresets.json
native/cmake/: embed_lua.cmake
native/include/palmod/: action_queue.hpp  build_profile.hpp  chat_hook.hpp  chat_message.hpp  command_router.hpp  control_server.hpp  fingerprint.hpp  fname_pool.hpp  generic_call.hpp  generic_hook.hpp  handle_table.hpp  hook_backend.hpp  invoke.hpp  json.hpp  json_log.hpp  object_array.hpp  object_walk.hpp  parms_decode.hpp  parms_encode.hpp  player_auth.hpp  player_directory.hpp  plugin_runtime.hpp  pointer_slot_hook.hpp  reflect_layout.hpp  reflection_backend.hpp  reflection_reader.hpp  reflection_resolver.hpp  runtime.hpp  sha256.hpp  types.hpp  utf16.hpp
native/src/: action_queue.cpp  bootstrap.cpp  build_profile.cpp  chat_hook.cpp  chat_message.cpp  command_router.cpp  control_server.cpp  fingerprint.cpp  fname_pool.cpp  frida_gum_backend.cpp  generic_call.cpp  generic_hook.cpp  hook_backend.cpp  invoke.cpp  json.cpp  json_log.cpp  object_array.cpp  object_walk.cpp  parms_decode.cpp  parms_encode.cpp  player_auth.cpp  player_directory.cpp  plugin_runtime.cpp  reflect_layout.cpp  reflection_backend.cpp  reflection_reader.cpp  reflection_resolver.cpp  runtime.cpp  sha256.cpp  utf16.cpp
native/tests/: fake_server.cpp  native_tests.cpp
packaging/: INSTALL.md  run.sh
plugins/find_item/: main.lua  manifest.json
plugins/give_item/: README.md  main.lua  manifest.json
plugins/hook_watch/: README.md  main.lua  manifest.json
profiles/: README.md  palworld-linux-24088465.toml
profiles/candidates/: palworld-linux-24088465.toml
profiles/evidence/: palworld-linux-24088465.static.json
reverse/: requirements-optional.txt  toolchain.lock.json
reverse/findings/: 24088465-static-corroboration.md
reverse/frida/: passive_agent.js  probe.py
reverse/gdb/: broadcast_chat_capture.gdb  enter_chat_capture.gdb
reverse/ghidra/: palmod_scan.py
reverse/palrevlib/: __init__.py  disasm.py  elf.py  evidence.py  labproc.py  reflection.py  scanner.py  schema.py
reverse/tests/: test_disasm.py  test_elf.py  test_evidence.py  test_frida_probe.py  test_scanner.py  test_schema.py
scripts/: lab-capture.sh  lab-env.sh  lab-lib.sh  lab-observe.sh  lab-preflight.sh  lab-probe.sh  lab-run.sh  lab-server.sh  make-dist.sh
sdk/: plugin-manifest.schema.json
sdk/include/palmod/: plugin_api.h
sdk/lua/: palmod.lua  stdlib.lua
