[workspace]
resolver = "2"
members = [
    "crates/palmod-profile",
    "crates/palrev",
    "crates/palmod-run",
    "crates/palmodctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/n0-computer/palmod"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
hex = "0.4.3"
libc = "0.2.177"
object = { version = "0.37.3", features = ["read_core", "elf"] }
nix = { version = "0.30.1", features = ["fs", "poll", "process", "signal", "socket", "user"] }
palmod-profile = { path = "crates/palmod-profile" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
signal-hook = "0.3.18"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
