[package]
name = "palmod-run"
description = "Fail-closed native Palworld launcher and profile verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
libc.workspace = true
nix.workspace = true
palmod-profile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
